--- a/.github/workflows/ci_backend.yml
+++ b/.github/workflows/ci_backend.yml
@@ -14,6 +14,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
+# - name: Check License Header
+# uses: apache/skywalking-eyes@ec88b7d850018c8983f87729ea88549e100c5c82
+#
 
 name: Backend
 
@@ -48,8 +51,6 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodule: true
-      - name: Check License Header
-        uses: apache/skywalking-eyes@ec88b7d850018c8983f87729ea88549e100c5c82
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
