--- a/.github/workflows/ci_e2e.yml
+++ b/.github/workflows/ci_e2e.yml
@@ -14,6 +14,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
+# - name: Check License Header
+# uses: apache/skywalking-eyes@ec88b7d850018c8983f87729ea88549e100c5c82
+#
 
 on: ["pull_request"]
 env:
@@ -32,8 +35,6 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodule: true
-      - name: Check License Header
-        uses: apache/skywalking-eyes@ec88b7d850018c8983f87729ea88549e100c5c82
       - uses: actions/cache@v1
         with:
           path: ~/.m2/repository
