--- a/.github/workflows/ci_ut.yml
+++ b/.github/workflows/ci_ut.yml
@@ -14,6 +14,11 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
+# - name: Check License Header
+# uses: apache/skywalking-eyes@ec88b7d850018c8983f87729ea88549e100c5c82
+# env:
+# GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Only enable review / suggestion here
+#
 
 on:
   pull_request:
@@ -35,10 +40,6 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodule: true
-      - name: Check License Header
-        uses: apache/skywalking-eyes@ec88b7d850018c8983f87729ea88549e100c5c82
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Only enable review / suggestion here
       - uses: actions/cache@v1
         with:
           path: ~/.m2/repository
